mlops-infra/istio/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: default
spec:
  selector:
    matchLabels:
      app: cifar10-inference
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
